# Skin-Changer

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CS2-SkinChanger.code-workspace  FAQ.md  HOW_TO_OPEN.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  RUNNER_CONFIGURATION.md  SECURITY.md  SETUP.md  TESTING.md  USAGE.md  VERIFICATION.md  VERSION_CHECK_DEMO.txt  VSCODE_SETUP.md  WEB_IMPLEMENTATION_SUMMARY.md  WORKSPACE_SUMMARY.md  license.key  open-workspace.bat  open-workspace.sh  start-web-server.bat  start-web-server.sh
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build-loader.yml  ci-cd.yml
_codeql_build_dir/: Makefile
admin/: license_gui.cpp  main.cpp
admin-portal/: README.md  index.html
app/: main.cpp
assets/: ac_glow_logo_data.h  ac_logo_data.h  cs2_logo_data.h
config/: offsets.json  skins.json
dll/: config.cpp  core.h  dllmain.cpp  hooks.cpp  inventory.cpp  menu.cpp  netvars.cpp  offsets.cpp  render.cpp  render_engine.h  skindb.cpp
engine/: ace_engine.h  ace_engine_v2.h  ace_renderer.cpp  ace_renderer.h  ace_ui.cpp  ace_ui.h
engine/core/: event.h  memory.h  reflection.h  thread_pool.h  types.h
engine/hot_reload/: hot_reload.cpp  hot_reload.h
engine/input/: input_system.h
engine/render/: dx11_backend.cpp  dx11_backend.h  font_atlas.cpp  font_atlas.h  render_backend.h
engine/scripting/: script_engine.cpp  script_engine.h
engine/ui/: animation.h  dock_system.cpp  dock_system.h  layout.h  theme.h  ui_context.cpp  ui_context.h  widget.cpp  widget.h
engine/ui/widgets/: graph_editor.cpp  graph_editor.h  node_editor.cpp  node_editor.h  property_inspector.cpp  property_inspector.h  viewport.cpp  viewport.h  widgets.cpp  widgets.h
include/: GUI.h  OffsetManager.h  PatternScanner.h  ProcessManager.h  SkinChanger.h  SkinDatabase.h
injector/: GameMenu.cpp  GameMenu.h  dllmain.cpp
loader/: ac_loader.manifest  gui_loader.cpp  loader.cpp  main.cpp  resource.h
src/: GUI.cpp  OffsetManager.cpp  PatternScanner.cpp  ProcessManager.cpp  SkinChanger.cpp  SkinDatabase.cpp  main.cpp
tools/: download_knives_gloves.py  download_skins.py  gen_ac_logo.py  gen_cs2_logo.py  gen_logo.py
user-dashboard/: index.html
web/: DEPLOYMENT.md  README.md
web/backend/: .env.example  database.js  package.json  server.js
web/backend/middleware/: adminAuth.js
web/backend/routes/: admin.js  auth.js  config.js  downloads.js
web/frontend/: admin.html  downloads.html  index.html
web/frontend/config/: cs2-skins-complete.json
web/frontend/css/: admin.css  style.css
web/frontend/js/: admin.js  api.js  auth.js  dashboard-configurator.js  dashboard-csapi.js  dashboard-gallery.js  dashboard-inventory.js  dashboard.js  downloads.js
web/frontend/src/app/: App.tsx
web/frontend/src/app/components/: ItemDetailPanel.tsx  ItemsPage.tsx  Sidebar.tsx  WeaponCard.tsx
